# TANGOS

./: .coveragerc  .gitignore  AUTHORS.rst  README.md  TANGOS_quickstart.ipynb  requirements.txt  setup.cfg  setup.py
.github/workflows/: test_tutorials.yml
src/tangos/: data_config.json  load_data.py  losses.py  models.py  regularizers.py
src/tangos/experiments/behavior-analysis/: behavior_analysis.ipynb
src/tangos/experiments/compute/: compute.ipynb
src/tangos/experiments/in-tandem-regularization/: main.py  print_results.ipynb
src/tangos/experiments/in-tandem-regularization/configs/: datasets.json
src/tangos/experiments/larger-data/: main.py  plotting.ipynb
src/tangos/experiments/stand-alone-regularization/: main.py  print_results.ipynb
src/tangos/legacy/: comment.md  legacy.py
tests/: TANGOS_quickstart_dummy_data.ipynb  TANGOS_quickstart_dummy_data_for_test.ipynb  conftest.py
tutorial/: TANGOS_quickstart.ipynb
