[metadata]
name = TANGOS
description = Regularizing Tabular Neural Networks through Gradient Orthogonalization and Specialization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyscaffold/pyscaffold/
author = Alan Jeffares
author_email = aj659@cam.ac.uk
license = BSD-3-Clause
license_file = LICENSE
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
packages = find_namespace:
install_requires =
    importlib-metadata;python_version<"3.8"
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pre-commit
    pytest
    pytest-cov
    setuptools

[tool:pytest]
addopts =
    --cov tangos --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.3.1
package = tangos
